# sca2amalthea-extension

./: .gitignore  pom.xml
doc/: info_files_examples.txt
features/: readme.txt
features/org.eclipse.app4mc.sca2amalthea.feature/: .project  feature.xml
features/org.eclipse.app4mc.sca2amalthea.feature.sdk/: .project  build.properties  feature.xml
plugins/: pom.tycho  readme.txt
plugins/org.eclipse.app4mc.sca.amalthea.loader/: .project
plugins/org.eclipse.app4mc.sca2amalthea.c_sources/sca/: CMakeLists.txt  TraverseASTMain.cpp
plugins/org.eclipse.app4mc.sca2amalthea.c_sources/sca/algorithms/: TraverseASTClassAction.cpp  TraverseASTClassAction.h  TraverseASTWorker.cpp  TraverseASTWorker.h
plugins/org.eclipse.app4mc.sca2amalthea.c_sources/sca/data_structure/: BasicBlock.cpp  BasicBlock.h  CallEntry.cpp  CallEntry.h  CallGraphItem.cpp  CallGraphItem.h  CallGraphItemContainer.cpp  CallGraphItemContainer.h  ClientDataForThread.cpp  ClientDataForThread.h  FunctionAndCallees.cpp  FunctionAndCallees.h  FunctionEntry.cpp  FunctionEntry.h  FunctionParameter.cpp  FunctionParameter.h  GlobalVariable.cpp  GlobalVariable.h  GlobalVariableAccess.cpp  GlobalVariableAccess.h  ModeEntry.cpp  ModeEntry.h  ModeSwitch.cpp  ModeSwitch.h  TraverseASTDataStructure.cpp  TraverseASTDataStructure.h  TraversingData.cpp  TraversingData.h
plugins/org.eclipse.app4mc.sca2amalthea.c_sources/sca/helpers/: Helpers.cpp  Helpers.h  TraverseASTMainHelpers.cpp  TraverseASTMainHelpers.h
plugins/org.eclipse.app4mc.sca2amalthea.c_sources/sca/output/: Output.cpp  Output.h
(+184 files in other folders)
